--- a/notebooks/prediction.ipynb
+++ b/notebooks/prediction.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -350,44 +350,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "22/10/07 01:48:55 WARN Executor: Issue communicating with driver in heartbeater \n",
-      "java.lang.NullPointerException\n",
-      "\tat org.apache.spark.storage.memory.MemoryStore.getSize(MemoryStore.scala:131)\n",
-      "\tat org.apache.spark.storage.BlockManager.org$apache$spark$storage$BlockManager$$getCurrentBlockStatus(BlockManager.scala:815)\n",
-      "\tat org.apache.spark.storage.BlockManager.$anonfun$reportAllBlocks$3(BlockManager.scala:571)\n",
-      "\tat org.apache.spark.storage.BlockManager.$anonfun$reportAllBlocks$3$adapted(BlockManager.scala:570)\n",
-      "\tat scala.collection.Iterator.foreach(Iterator.scala:941)\n",
-      "\tat scala.collection.Iterator.foreach$(Iterator.scala:941)\n",
-      "\tat scala.collection.AbstractIterator.foreach(Iterator.scala:1429)\n",
-      "\tat org.apache.spark.storage.BlockManager.reportAllBlocks(BlockManager.scala:570)\n",
-      "\tat org.apache.spark.storage.BlockManager.reregister(BlockManager.scala:590)\n",
-      "\tat org.apache.spark.executor.Executor.reportHeartBeat(Executor.scala:1000)\n",
-      "\tat org.apache.spark.executor.Executor.$anonfun$heartbeater$1(Executor.scala:212)\n",
-      "\tat scala.runtime.java8.JFunction0$mcV$sp.apply(JFunction0$mcV$sp.java:23)\n",
-      "\tat org.apache.spark.util.Utils$.logUncaughtExceptions(Utils.scala:1996)\n",
-      "\tat org.apache.spark.Heartbeater$$anon$1.run(Heartbeater.scala:46)\n",
-      "\tat java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:511)\n",
-      "\tat java.util.concurrent.FutureTask.runAndReset(FutureTask.java:308)\n",
-      "\tat java.util.concurrent.ScheduledThreadPoolExecutor$ScheduledFutureTask.access$301(ScheduledThreadPoolExecutor.java:180)\n",
-      "\tat java.util.concurrent.ScheduledThreadPoolExecutor$ScheduledFutureTask.run(ScheduledThreadPoolExecutor.java:294)\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)\n",
-      "\tat java.lang.Thread.run(Thread.java:748)\n",
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
+      "4401 4422\n"
      ]
     },
     {
@@ -401,7 +364,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4402 4422\n"
      ]
     },
     {
@@ -415,7 +378,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4403 4422\n"
      ]
     },
     {
@@ -429,7 +392,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4404 4422\n"
      ]
     },
     {
@@ -443,7 +406,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4405 4422\n"
      ]
     },
     {
@@ -457,7 +420,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4406 4422\n"
      ]
     },
     {
@@ -471,7 +434,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4407 4422\n"
      ]
     },
     {
@@ -485,7 +448,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4408 4422\n"
      ]
     },
     {
@@ -499,7 +462,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4409 4422\n"
      ]
     },
     {
@@ -513,7 +476,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4410 4422\n"
      ]
     },
     {
@@ -527,7 +490,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4411 4422\n"
      ]
     },
     {
@@ -541,7 +504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4412 4422\n"
      ]
     },
     {
@@ -555,7 +518,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4413 4422\n"
      ]
     },
     {
@@ -569,7 +532,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4414 4422\n"
      ]
     },
     {
@@ -583,7 +546,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4415 4422\n"
      ]
     },
     {
@@ -597,7 +560,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4416 4422\n"
      ]
     },
     {
@@ -611,7 +574,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4417 4422\n"
      ]
     },
     {
@@ -625,7 +588,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4418 4422\n"
      ]
     },
     {
@@ -639,7 +602,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4419 4422\n"
      ]
     },
     {
@@ -653,7 +616,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4420 4422\n"
      ]
     },
     {
@@ -667,7 +630,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "4421 4422\n"
      ]
     },
     {
@@ -681,308 +644,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
+      "4422 4422\n"
      ]
     }
    ],
@@ -1022,7 +684,7 @@
     "    x_input = x_input.reshape((1, n_months))\n",
     "    ypredict = model.predict(x_input, verbose=0)\n",
     "    predict_store.append((merchant, (ypredict[0][0]).item()))\n",
-    "\n",
+    "    print((counts)*save_freq+len(predict_store),n_merchnts)\n",
     "    #write for each 100 merchant prediction\n",
     "    if len(predict_store)%save_freq == 0:\n",
     "        print(len(predict_store))\n",
@@ -1030,7 +692,7 @@
     "        save_df.write.mode(\"overwrite\").parquet(f\"../data/curated/prediction/predicted_dollar_value{counts}.parquet\")\n",
     "        predict_store = []\n",
     "        counts += 1\n",
-    "    elif ((counts+1)*save_freq+len(predict_store)) == n_merchnts: #last remaining data\n",
+    "    elif ((counts)*save_freq+len(predict_store)) == n_merchnts: #last remaining data\n",
     "        save_df = spark.createDataFrame(data=predict_store, schema = [\"merchant_abn\",\"predict_dollar_value\"])\n",
     "        save_df.write.mode(\"overwrite\").parquet(f\"../data/curated/prediction/predicted_dollar_value{counts}.parquet\")\n",
     "    else:\n",
@@ -1040,20 +702,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'float'>\n"
+      "22\n"
      ]
     }
    ],
    "source": [
     "#\n",
-    "print(type((predict_store[0][1]).item()))"
+    "print(len(predict_store))\n"
    ]
   }
  ],
