--- a/models/Fitting_model.ipynb
+++ b/models/Fitting_model.ipynb
@@ -319,18 +319,20 @@
    "outputs": [],
    "source": [
     "# Return the the dataframe with the scores sorted of 4026 companies that weighted by entropy\n",
+    "# Link about how to calculate the entropy https://www.hindawi.com/journals/mpe/2020/3564835/\n",
     "def get_rank_df(unsort_df,col_list_1,col_list_2):\n",
     "    unsort_map = get_map_df(unsort_df, col_list_1)\n",
     "    unsort_entropy = unsort_map.withColumn('avg_prob_fraud_cus', (unsort_map.avg_prob_fraud_cus *(-1)))\\\n",
     "    .withColumn('prob_of_fraud', (unsort_map.prob_of_fraud*(-1)))\n",
     "    entropy = get_entropy(unsort_entropy,col_list_2)\n",
+    "    # Use the entropy weight to add the sum scores\n",
     "    unsorted_entropy_score = unsort_map.withColumn('entropy_score', unsort_map.Revenue_levels * entropy[0]*13+unsort_map.Take_rate * entropy[1]*13 + unsort_map.count_of_bigorder * entropy[2]*13 +\\\n",
     "                            unsort_map.Avg_amount_monthly *entropy[3]*13+ unsort_map.Avg_count_monthly *entropy[4]*13 +\\\n",
     "                            unsort_map.Order_avg_value *entropy[5]*13 + unsort_map.avg_prob_fraud_cus * entropy[6]*13+ unsort_map.prob_of_fraud * entropy[7]*13+\\\n",
     "                            unsort_map.count_cus_per_mon * entropy[8]*13 + unsort_map.fix_cus_num  * entropy[9]*13+\\\n",
     "                            unsort_map.avg_income_percentage * entropy[10]*13 + unsort_map.avg_age_percentage * entropy[11]*13 +\\\n",
     "                                unsort_map.predict_dollar_value * entropy[12]*13)\n",
-    "    \n",
+    "    # Rank all the scores\n",
     "    sorted_entropy_rank_pd = unsorted_entropy_score.toPandas()\n",
     "    sorted_entropy_rank_pd['entropy_rank'] = sorted_entropy_rank_pd.entropy_score.rank(axis=0,method='min', ascending=False)\n",
     "    sorted_entropy_rank_pd['entropy_rank'] = sorted_entropy_rank_pd.entropy_rank.astype(int)\n",
@@ -425,6 +427,7 @@
    "outputs": [],
    "source": [
     "# Sort the original dataframe use subjective weight method and the mapping method is min_max 0-100\n",
+    "# Subjective weighting\n",
     "self_weight_score = final_1.withColumn('weight_score', 0.05*13*final_1.Revenue_levels + 0.05*13*final_1.Take_rate + 0.025*13*final_1.count_of_bigorder +\\\n",
     "                            0.1*13*final_1.Avg_amount_monthly + 0.1*13*final_1.Avg_count_monthly +\\\n",
     "                            0.015*13*final_1.Order_avg_value + 0.25*13*final_1.avg_prob_fraud_cus + 0.25*13*final_1.prob_of_fraud +\\\n",
@@ -652,7 +655,7 @@
     "for col in final_rank_coldf.columns:\n",
     "    if col == \"merchant_abn\":\n",
     "        continue\n",
-    "    else: #columns that have number bigger = higher rank\n",
+    "    else: # Columns that have number bigger = higher rank\n",
     "        final_rank_coldf = final_rank_coldf.withColumn(\"rank_\"+col, F.dense_rank().over(Window.orderBy(F.desc(col)))).drop(col)\n",
     "\n",
     "numeric_col = final_rank_coldf.columns\n",
@@ -2222,7 +2225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('ads')",
+   "display_name": "Python 3.8.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -2241,7 +2244,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6e45bdfcba1031802b2f7a315f02d536e51553942a60e4ee4be74aec82814bfa"
+    "hash": "80d22fffded80c5bd95a70be935aa0a7eaf27817ba3bc2982545179d76b51d91"
    }
   }
  },
