--- a/notebooks/geovisualisation.ipynb
+++ b/notebooks/geovisualisation.ipynb
@@ -2,23 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "22/10/04 14:55:31 WARN Utils: Your hostname, SerennoMacBook-Air.local resolves to a loopback address: 127.0.0.1; using 10.13.233.200 instead (on interface en0)\n",
-      "22/10/04 14:55:31 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "22/10/04 14:55:32 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "22/10/04 14:55:34 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions as F\n",
@@ -26,7 +12,15 @@
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "import folium\n",
-    "from shapely.wkt import loads\n",
+    "from shapely.wkt import loads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create a spark session (which will run spark jobs)\n",
     "spark = (\n",
     "    SparkSession.builder.appName(\"MAST30034 Tutorial 1\")\n",
@@ -34,37 +28,27 @@
     "    .config(\"spark.sql.parquet.cacheMetadata\", \"true\")\n",
     "    .config(\"spark.sql.session.timeZone\", \"Etc/UTC\")\n",
     "    .getOrCreate()\n",
-    "    \n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "geospark = spark.read.parquet('../data/curated/SA2_2021_VIC_shapefile.parquet/')\n",
+    "geospark = spark.read.parquet('../data/external/SA2_2021_VIC_shapefile.parquet/')\n",
     "census = spark.read.parquet('../data/curated/final_census.parquet')\n",
-    "\n",
-    "vic_data = geospark.join(census, geospark.SA2_CODE21 == census.SA2_CODE_2021, \"left\").drop(census.SA2_CODE_2021)\n"
+    "vic_data = geospark.join(census, geospark.SA2_CODE21 == census.SA2_CODE_2021, \"left\").drop(census.SA2_CODE_2021)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Use SA2 to do the visualizaton\n",
     "def visualisation(col_name, vic_data,geospark, title):\n",
     "    data = vic_data.groupBy(\"SA2_CODE21\").agg(F.avg(col_name).alias(col_name))\n",
     "    pdf = geospark.select(\"SA2_CODE21\", \"geometry\").toPandas()\n",
@@ -87,31 +71,23 @@
     "    map = c.add_to(m)\n",
     "\n",
     "    map.save('../plots/foliumChoropleth_'+col_name+'.html')\n",
-    "    map"
+    "    map\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "visualisation(\"income_percentage\", vic_data, geospark,\"average income percentage by SA2\")\n",
-    "visualisation(\"age_percentage\", vic_data, geospark,\"age_percentage\")\n"
+    "visualisation(\"age_percentage\", vic_data, geospark,\"age_percentage\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('base')",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -125,12 +101,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "664b9b2cfc08063ed3ab9f92e6d6cbdfe30eb833d966541c89dc480f035db465"
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
    }
   }
  },
