--- a/notebooks/Visualization.ipynb
+++ b/notebooks/Visualization.ipynb
@@ -24,8 +24,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/10/14 14:50:12 WARN Utils: Your hostname, hexiangyideMacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.13.189.29 instead (on interface en0)\n",
-      "22/10/14 14:50:12 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "22/10/14 15:12:51 WARN Utils: Your hostname, hexiangyideMacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.13.189.29 instead (on interface en0)\n",
+      "22/10/14 15:12:51 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -40,7 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/10/14 14:50:12 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "22/10/14 15:12:52 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
     "ax.set_ylabel('count', labelpad = 10, color = 'blue', fontsize=12)\n",
     "ax.set_xlabel('Order_avg_value', labelpad = 10, color = 'blue', fontsize=12)\n",
     "ax.set_title('The distribution of the average value of each order', pad = 20, color = 'blue', weight = 'bold')\n",
-    "plt.savefig('../plots/avg_value_per_order.png', bbox_inches='tight')"
+    "plt.savefig('../plots/avg_value_per_order.jpg', bbox_inches='tight')"
    ]
   },
   {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
     "ax.set_ylabel('count', labelpad = 10, color = 'blue', fontsize=12)\n",
     "ax.set_xlabel('number of consumer per month', labelpad = 10, color = 'blue', fontsize=12)\n",
     "ax.set_title('The distribution of average number of different consumers per month per shop', pad = 20, color = 'blue', weight = 'bold')\n",
-    "plt.savefig('../plots/num_of_customer_per_month.png')"
+    "plt.savefig('../plots/num_of_customer_per_month.jpg',bbox_inches='tight')"
    ]
   },
   {
@@ -249,7 +249,7 @@
     "ax.set_ylabel('amount', labelpad = 10, color = 'blue', fontsize=12)\n",
     "ax.set_xlabel('avg transaction value ', labelpad = 10, color = 'blue', fontsize=12)\n",
     "ax.set_title('The distribution of the average amount of the transaction in each month (small)', pad = 20, color = 'blue', weight = 'bold')\n",
-    "plt.savefig('../plots/avg_amount_count_small.png', bbox_inches='tight')"
+    "plt.savefig('../plots/avg_amount_count_small.jpg', bbox_inches='tight')"
    ]
   },
   {
@@ -298,7 +298,7 @@
     "ax.set_ylabel('number', labelpad = 10, color = 'blue', fontsize=12)\n",
     "ax.set_xlabel('shop name', labelpad = 10, color = 'blue', fontsize=12)\n",
     "ax.set_title('The number of different store type with large monthly sales', pad = 20, color = 'blue', weight = 'bold')\n",
-    "plt.savefig('../plots/store_type_large_amount.png', bbox_inches='tight')"
+    "plt.savefig('../plots/store_type_large_amount.jpg', bbox_inches='tight')"
    ]
   },
   {
@@ -358,7 +358,7 @@
     "ax.set_xlabel('avg transaction value ', labelpad = 10, color = 'blue', fontsize=12)\n",
     "# plt.xticks(np.arange(0, 201, step=7))\n",
     "ax.set_title('The distribution of the average count of the transaction under 1400 in each month (small)', pad = 20, color = 'blue', weight = 'bold')\n",
-    "plt.savefig('../plots/Avg_count_monthly_small.png', bbox_inches='tight')"
+    "plt.savefig('../plots/Avg_count_monthly_small.jpg', bbox_inches='tight')"
    ]
   },
   {
@@ -407,7 +407,7 @@
     "ax.set_ylabel('number', labelpad = 10, color = 'blue', fontsize=12)\n",
     "ax.set_xlabel('shop name', labelpad = 10, color = 'blue', fontsize=12)\n",
     "ax.set_title('The number of different store type with large count monthly', pad = 20, color = 'blue', weight = 'bold')\n",
-    "plt.savefig('../plots/store_type_large_count.png', bbox_inches='tight')"
+    "plt.savefig('../plots/store_type_large_count.jpg', bbox_inches='tight')"
    ]
   },
   {
@@ -456,7 +456,7 @@
     "ax.set_ylabel('number', labelpad = 10, color = 'blue', fontsize=12)\n",
     "ax.set_xlabel('shop name', labelpad = 10, color = 'blue', fontsize=12)\n",
     "ax.set_title('The number of different store type', pad = 20, color = 'blue', weight = 'bold')\n",
-    "plt.savefig('../plots/store_type.png', bbox_inches='tight')"
+    "plt.savefig('../plots/store_type.jpg', bbox_inches='tight')"
    ]
   }
  ],
