--- a/notebooks/geovisualisation.ipynb
+++ b/notebooks/geovisualisation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/10/14 15:50:17 WARN Utils: Your hostname, hexiangyideMacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.13.189.29 instead (on interface en0)\n",
+      "22/10/14 15:50:17 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/10/14 15:50:17 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/10/14 15:50:19 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "22/10/14 15:50:19 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
+      "22/10/14 15:50:19 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n",
+      "22/10/14 15:50:19 WARN Utils: Service 'SparkUI' could not bind on port 4043. Attempting port 4044.\n",
+      "22/10/14 15:50:19 WARN Utils: Service 'SparkUI' could not bind on port 4044. Attempting port 4045.\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a spark session (which will run spark jobs)\n",
     "spark = (\n",
@@ -33,9 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "geospark = spark.read.parquet('../data/external/SA2_2021_VIC_shapefile.parquet/')\n",
     "census = spark.read.parquet('../data/curated/final_census.parquet')\n",
@@ -44,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,19 +112,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "According to the postcode, draw the proportion of the age group between 20-64 in total number of people in that region and the proportion of people earning above the Australian weekly median income ($1200) to the total number of people. The darker the color on the geo graph, the higher the percentage and the higher the consumption level of the people in the region."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "visualisation(\"income_percentage\", vic_data, geospark,\"percentage of people above medium income by SA2\")\n",
+    "visualisation(\"age_percentage\", vic_data, geospark,\"age percentage between 25-60\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "visualisation(\"income_percentage\", vic_data, geospark,\"average income percentage by SA2\")\n",
-    "visualisation(\"age_percentage\", vic_data, geospark,\"age_percentage\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.8.13 ('ads')",
    "language": "python",
    "name": "python3"
   },
@@ -101,12 +160,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+    "hash": "6e45bdfcba1031802b2f7a315f02d536e51553942a60e4ee4be74aec82814bfa"
    }
   }
  },
