--- a/models/prediction.ipynb
+++ b/models/prediction.ipynb
@@ -20,7 +20,7 @@
     }
    ],
    "source": [
-    "#please install keras and tenserflow beforehand\n",
+    "# please install keras and tenserflow beforehand\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions as F\n",
     "from pyspark.sql.functions import *\n",
@@ -197,31 +197,31 @@
    "source": [
     "# this code will take 4500 minutes so please think carefully before running\n",
     "\n",
-    "#create a model and predict for each merchant\n",
+    "# create a model and predict for each merchant\n",
     "for merchant in distinct_merchants:\n",
     "    one_merchant_data = data.filter(F.col(\"merchant_abn\")==merchant)\\\n",
     "                            .groupBy(F.col(\"month_num\"))\\\n",
     "                            .agg(F.avg(\"dollar_value\").alias(\"avg_dollar_value\"))\n",
     "\n",
-    "    #add month row with dollar value = 0 in case data from any month was missing\n",
+    "    # add month row with dollar value = 0 in case data from any month was missing\n",
     "    one_merchant_and_missing_months = initial_df.join(one_merchant_data, initial_df.month_num == one_merchant_data.month_num, \"left\")\\\n",
     "                    .drop(one_merchant_data.month_num)\\\n",
     "                    .na.fill(value=0)\\\n",
     "                    .sort(initial_df.month_num)\\\n",
     "\n",
-    "    #fit the model\n",
+    "    # fit the model\n",
     "    list_dollar = one_merchant_and_missing_months.select(\"avg_dollar_value\").rdd.flatMap(lambda x: x).collect()\n",
     "    X, y = consec_data(list_dollar, n_months)\n",
     "    model.fit(X, y, epochs=100, verbose=0)\n",
     "\n",
     "\n",
-    "    #predict using the model\n",
+    "    # predict using the model\n",
     "    x_input = array(list_dollar[-n_months:])\n",
     "    x_input = x_input.reshape((1, n_months))\n",
     "    ypredict = model.predict(x_input, verbose=0)\n",
     "    predict_store.append((merchant, (ypredict[0][0]).item()))\n",
     "\n",
-    "    #save for each 100 merchant prediction\n",
+    "    # save for each 100 merchant prediction\n",
     "    if len(predict_store)%save_freq == 0:\n",
     "        save_df = spark.createDataFrame(data=predict_store, schema = [\"merchant_abn\",\"predict_dollar_value\"])\n",
     "        save_df.write.mode(\"overwrite\").parquet(f\"../data/curated/prediction/predicted_dollar_value{counts}.parquet\")\n",
@@ -327,7 +327,7 @@
     "                            .groupBy(F.col(\"month_num\"))\\\n",
     "                            .agg(F.avg(\"dollar_value\").alias(\"avg_dollar_value\"))\n",
     "\n",
-    "    #add month row with dollar value = 0 in case data from any month was missing\n",
+    "    # add month row with dollar value = 0 in case data from any month was missing\n",
     "    one_merchant_and_missing_months = initial_df.join(one_merchant_data, initial_df.month_num == one_merchant_data.month_num, \"left\")\\\n",
     "                    .drop(one_merchant_data.month_num)\\\n",
     "                    .na.fill(value=0)\\\n",
@@ -359,7 +359,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('base')",
+   "display_name": "Python 3.8.13 ('ads')",
    "language": "python",
    "name": "python3"
   },
@@ -373,12 +373,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "664b9b2cfc08063ed3ab9f92e6d6cbdfe30eb833d966541c89dc480f035db465"
+    "hash": "6e45bdfcba1031802b2f7a315f02d536e51553942a60e4ee4be74aec82814bfa"
    }
   }
  },
