--- a/models/prediction.ipynb
+++ b/models/prediction.ipynb
@@ -316,12 +316,14 @@
     }
    ],
    "source": [
+    "# load predicted data\n",
     "prediction = spark.read.parquet('../data/curated/prediction/predicted_dollar_value0.parquet')\n",
     "for counts in range(1,45):\n",
     "    counts =  str(counts)\n",
     "    prediction_add = spark.read.parquet(f\"../data/curated/prediction/predicted_dollar_value{counts}.parquet\")\n",
     "    prediction = prediction.union(prediction_add)\n",
     "\n",
+    "# randomely take 3 merchants\n",
     "for n in random.sample(range(n_merchnts),3):\n",
     "    one_merchant_data = data.filter(F.col(\"merchant_abn\")==distinct_merchants[n])\\\n",
     "                            .groupBy(F.col(\"month_num\"))\\\n",
@@ -334,10 +336,15 @@
     "                    .sort(initial_df.month_num)\n",
     "                  \n",
     "    one_prediction = prediction.filter(F.col(\"merchant_abn\") == distinct_merchants[n]).collect()[0]\n",
+    "    # the predicted value\n",
     "    temp = spark.createDataFrame([(MONTH_PERIOD+1, one_prediction[1])], [\"month_num\", \"avg_dollar_value\"])\n",
+    "    pred_pdf = temp.toPandas()\n",
+    "    # historical values\n",
     "    transition = one_merchant_and_missing_months.drop(F.col(\"zeros\")).unionByName(temp)\n",
     "    pdf = transition.orderBy(\"month_num\").toPandas()\n",
-    "    pred_pdf = temp.toPandas()\n",
+    "\n",
+    "\n",
+    "    # plot them together\n",
     "    plt.plot(pdf.iloc[MONTH_PERIOD-1:, 0], pdf.iloc[MONTH_PERIOD-1:, 1],  color = \"red\", marker = \"o\")\n",
     "    plt.plot(pdf.iloc[0:MONTH_PERIOD, 0], pdf.iloc[0:MONTH_PERIOD, 1],  color = \"blue\", marker = \"o\")\n",
     "    plt.ylabel(\"dollar value\")\n",
@@ -359,7 +366,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('ads')",
+   "display_name": "Python 3.7.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -373,12 +380,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6e45bdfcba1031802b2f7a315f02d536e51553942a60e4ee4be74aec82814bfa"
+    "hash": "664b9b2cfc08063ed3ab9f92e6d6cbdfe30eb833d966541c89dc480f035db465"
    }
   }
  },
