--- a/notebooks/geovisualisation.ipynb
+++ b/notebooks/geovisualisation.ipynb
@@ -19,13 +19,39 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql import functions as F\n",
+    "from pyspark.sql import Window\n",
+    "import numpy as np\n",
+    "from pyspark.sql.functions import *\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import zipfile\n",
+    "import geopandas as gpd\n",
+    "from dbfread import DBF\n",
+    "from urllib.request import urlretrieve\n",
+    "from urllib.error import HTTPError\n",
+    "from pyspark.sql.types import StringType\n",
+    "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql.functions import col\n",
+    "from operator import add\n",
+    "from functools import reduce\n",
+    "from pyspark.sql.functions import round"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/10/14 15:50:17 WARN Utils: Your hostname, hexiangyideMacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.13.189.29 instead (on interface en0)\n",
-      "22/10/14 15:50:17 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "22/10/15 15:21:32 WARN Utils: Your hostname, hexiangyideMacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.13.189.29 instead (on interface en0)\n",
+      "22/10/15 15:21:32 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -40,12 +66,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/10/14 15:50:17 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "22/10/14 15:50:19 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "22/10/14 15:50:19 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
-      "22/10/14 15:50:19 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n",
-      "22/10/14 15:50:19 WARN Utils: Service 'SparkUI' could not bind on port 4043. Attempting port 4044.\n",
-      "22/10/14 15:50:19 WARN Utils: Service 'SparkUI' could not bind on port 4044. Attempting port 4045.\n"
+      "22/10/15 15:21:33 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/10/15 15:21:34 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "22/10/15 15:21:34 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
      ]
     }
    ],
@@ -62,7 +85,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download SA2 2021 information\n",
+    "url = \"https://www.abs.gov.au/statistics/standards/australian-statistical-geography-standard-asgs-edition-3/jul2021-jun2026/access-and-downloads/digital-boundary-files/SA2_2021_AUST_SHP_GDA2020.zip\" \n",
+    "# year-month.parquet\n",
+    "output_dir = \"../data/outer/2021sa2_shapefile.zip\"\n",
+    "# download\n",
+    "urlretrieve(url, output_dir) \n",
+    "print(\"complete\")\n",
+    "\n",
+    "files = zipfile.ZipFile('../data/outer/2021sa2_shapefile.zip','r')\n",
+    "for file in files.namelist():\n",
+    "    files.extract(file, f\"../data/outer/2021sa2_shapefile\")\n",
+    "\n",
+    "# Download shapefile for each SA2 region\n",
+    "def get_shapefile(url):\n",
+    "    geojson_option = \"?_profile=oai&_mediatype=application/geo+json\"\n",
+    "    try:\n",
+    "        shape = str(gpd.read_file(url + geojson_option).iat[0,-1])\n",
+    "    except HTTPError:\n",
+    "        shape = \"\"\n",
+    "    return shape\n",
+    "\n",
+    "get_shapefile_udf = udf(lambda a: get_shapefile(a),StringType())\n",
+    "\n",
+    "path = r'../data/outer/2021sa2_shapefile/SA2_2021_AUST_GDA2020.dbf' \n",
+    "table = DBF(path)\n",
+    "sa2_pd_temp = pd.DataFrame(iter(table))\n",
+    "sa2_2021_temp = spark.createDataFrame(sa2_pd_temp) \n",
+    "\n",
+    "sa2_2021_vic = sa2_2021_temp.filter(F.col(\"STE_NAME21\")==\"Victoria\")\n",
+    "sa2_2021_vic_w_geo = sa2_2021_vic.withColumn(\"geometry\", get_shapefile_udf(F.col(\"LOCI_URI21\")))\n",
+    "sa2_2021_vic_w_geo = sa2_2021_vic_w_geo.select(\"SA2_CODE21\", \"SA2_NAME21\", \"geometry\")\n",
+    "#sa2_2021_vic_w_geo.write.option(\"maxRecordsPerFile\", 1).mode(\"overwrite\").parquet(\"data/external/SA2_2021_VIC_shapefile.parquet\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -74,14 +145,15 @@
     }
    ],
    "source": [
-    "geospark = spark.read.parquet('../data/external/SA2_2021_VIC_shapefile.parquet/')\n",
+    "#geospark = spark.read.parquet('../data/external/SA2_2021_VIC_shapefile.parquet/')\n",
+    "geospark = sa2_2021_vic_w_geo\n",
     "census = spark.read.parquet('../data/curated/final_census.parquet')\n",
     "vic_data = geospark.join(census, geospark.SA2_CODE21 == census.SA2_CODE_2021, \"left\").drop(census.SA2_CODE_2021)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +174,7 @@
     "        key_on='properties.SA2_CODE21', # this is from the geoJSON's properties\n",
     "        fill_color='YlOrRd', # color scheme\n",
     "        nan_fill_color='black',\n",
-    "        legend_name=col_name\n",
+    "        legend_name=title\n",
     "    )\n",
     "\n",
     "    map = c.add_to(m)\n",
@@ -120,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
