changed a little bit of prediction.ipnb
just changed "4500 hours" to "450 hours"

--- a/models/prediction.ipynb
+++ b/models/prediction.ipynb
@@ -112,9 +112,10 @@
     "        end_month = i + n_months\n",
     "        if end_month > len(data_list)-1:\n",
     "            break\n",
-    "        get_x, get_y = data_list[i:end_month], data_list[end_month]\n",
-    "        X.append(get_x)\n",
-    "        y.append(get_y)\n",
+    "        x_consec = data_list[i:end_month]\n",
+    "        y_consec = data_list[end_month]\n",
+    "        X.append(x_consec)\n",
+    "        y.append(y_consec)\n",
     "    return array(X), array(y)\n"
    ]
   },
@@ -195,7 +196,7 @@
     }
    ],
    "source": [
-    "# this code will take 4500 minutes so please think carefully before running\n",
+    "# this code will take 450 minutes so please think carefully before running\n",
     "\n",
     "# create a model and predict for each merchant\n",
     "for merchant in distinct_merchants:\n",
