--- a/notebooks/summary notebook.ipynb
+++ b/notebooks/summary notebook.ipynb
@@ -1442,7 +1442,7 @@
    "metadata": {},
    "source": [
     "### 4.5 Top 10 Merchants in 5 Segments  \n",
-    "a. Classification: manually divided into 5 categories: Art & Accessories('art'), Sports & Motors, Technology, Home & Garden, Health & Beauty  \n",
+    "a. Classification: manually divided into 5 categories: Art & Accessories(<font color = #deab8a>'art'</font>), Sports & Motors(<font color = #deab8a>'sports'</font>), Technology(<font color = #deab8a>'technology'</font>), Home & Garden(<font color = #deab8a>'home'</font>), Health & Beauty(<font color = #deab8a>'health'</font>).  \n",
     "b. Use Final Model to obtain the top10 in each Segments."
    ]
   },
